@@ -2606,8 +2606,10 @@ terminal.
       --x509-ca-file=FILE       File containing one or more X.509 Certificate
                                   Authorities certificates in PEM format, used
                                   to verify the certificate received from the
-                                  server.  If not specified, no verification of
-                                  the remote server certificate will be done.
+                                  server.  If not specified, verification uses
+                                  system trust settings.  If FILE is the empty
+                                  string, don't fail on X.509 server
+                                  certificates verification errors.
       --x509-cert-file=FILE     File containing client X.509 certificate in PEM
                                   format.  Used together with --x509-key-file
                                   to specify the certificate/key pair.
